# test_claude

./: .gitignore  README.md  pyproject.toml  setup.py
dft_pw/: __init__.py  basis.py  calculator.py  cli.py  crystal.py  hamiltonian.py  hdf5_output.py  kpoints.py  nscf.py  pseudopotential.py  scf.py  wannier.py  xc.py
examples/: scf.h5  silicon.py  silicon_elbands.py  silicon_nscf.py  silicon_wannier.py
pseudopotentials/: Si.upf
tests/: __init__.py  test_basis.py  test_crystal.py  test_kpoints.py  test_nscf.py  test_wannier.py
